--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,12 @@
 version: '3.8'
 
 services:
-  db:
-    image: mysql:latest
-    container_name: mysql_container
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-    ports:
-      - "3306:3306"
-    volumes:
-      - db_data:/var/lib/mysql
-
   php:
     build: .
     container_name: php_container
-    depends_on:
-      - db
     volumes:
       - ./:/var/www/html
+      - ./apache.conf:/etc/apache2/sites-available/000-default.conf
     ports:
       - "8080:80"
     environment:
