--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
 
   mysql:
-    image: mysql:5.7
+    image: mysql/mysql-server:8.0
     container_name: mysql_container
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
