make the login button work

--- a/Backend/.env
+++ b/Backend/.env
@@ -3,3 +3,9 @@ DB_PORT=3306
 DB_NAME=CSC131Project_db 
 DB_USERNAME=user          
 DB_PASSWORD=password      
+
+
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+FACEBOOK_APP_ID=your-facebook-app-id
+FACEBOOK_APP_SECRET=your-facebook-app-secret
