--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   php:
     build: .
@@ -24,6 +22,7 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_HOST: '%'
     ports:
       - "3307:3306"
     volumes:
@@ -32,3 +31,5 @@ services:
 
 volumes:
   mysql_data:
+
+
